fix(auth): Refresh icon on table is too close to the button when hovered.

--- a/src/components/Auth/UsersCard/header/AuthHeader.module.scss
+++ b/src/components/Auth/UsersCard/header/AuthHeader.module.scss
@@ -2,3 +2,7 @@
   flex-shrink: 0;
   padding: 0 20px;
 }
+
+.addUserButton {
+  margin-left: 8px;
+}
